A new version of My Tester is out. It is now possible to disable .phpt tests in mytester.php. Tests can be skipped if an env variable is not set (to a value) now. Test suites from certain subfolders can be excluded from loading and running.

Tests can be marked as flaky, they will be retry on failure, up to specified max times.

For complete list of changes since previous version, see CHANGELOG.md.